# context-hub

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/db/: mod.rs
src-tauri/src/parser/: codex.rs  cursor.rs  links.rs  mod.rs  title.rs
src-tauri/src/watcher/: mod.rs
src/components/: ChatCard.tsx  ChatDetail.tsx  ChatList.tsx  LinkPanel.tsx  SearchBar.tsx  Settings.tsx
src/lib/: LanguageContext.tsx  api.ts  claude.ts  i18n.ts  types.ts
